src/test/deca/etapeB/invalid/binary_op_bool/lt_int_string.deca
// Description:
//    Déclaration de variable
//
// Resultats:
//    Ligne 11 : mauvais typage de l'inégalité
// 

{
    int a;
    String b;
    b = b < a;
}
